--- a/HTML/index.html
+++ b/HTML/index.html
@@ -230,7 +230,7 @@
         <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-6">
-                    <a class="link" href="#">Ver todos los Magos</a>               
+                    <a class="link" href="magos.html">Ver todos los Magos</a>               
                 </div>
             </div>
             <!--// end row -->
