--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <li class="pricing-list-item">Cientos de shows realizados</li>
                                 <li class="pricing-list-item">Preparados para cualquier situación</li>
                             </ul>
-                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
+                            <a href="magos.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
                         </div>
                         <!-- End Pricing -->
                     </div>
@@ -200,7 +200,7 @@
                                 <li class="pricing-list-item">Premios internacionales</li>
                                 <li class="pricing-list-item">Íconos de la Magia Argentina</li>
                             </ul>
-                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
+                            <a href="magos.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
                         </div>
                         <!-- End Pricing -->
                     </div>
@@ -216,7 +216,7 @@
                                 <li class="pricing-list-item">Precio accesible</li>
                                 <li class="pricing-list-item">Entretenimiento garantizado</li>
                             </ul>
-                            <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
+                            <a href="magos.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Elegir</a>
                         </div>
                         <!-- End Pricing -->
                     </div>
