--- a/HTML/index.html
+++ b/HTML/index.html
@@ -104,7 +104,7 @@
                                 <h2 class="carousel-title">Por arte de Magia</h2>
                                 <p>Nos dedicamos al aval de magos de todo el país, <br/> aquí puedes ver con cuantas estrellas los hemos calificado.</p>
                             </div>
-                            <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explore</a>
+                            <a href="magos.html" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Magos</a>
                         </div>
                     </div>
                 </div>
