--- a/HTML/index.html
+++ b/HTML/index.html
@@ -85,7 +85,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img class="img-responsive" src="img/1920x1080/01.jpg" alt="Slider Image">
+                    <img class="img-responsive" src="img/1920x1080/closeup.jpg" alt="Slider Image">
                     <div class="container">
                         <div class="carousel-centered">
                             <div class="margin-b-40">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img class="img-responsive" src="img/1920x1080/02.jpg" alt="Slider Image">
+                    <img class="img-responsive" src="img/1920x1080/teatro.jpg" alt="Slider Image">
                     <div class="container">
                         <div class="carousel-centered">
                             <div class="margin-b-40">
