Added images and better stars

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="promo-section-img-right">
-                <img class="img-responsive" src="img/970x970/01.jpg" alt="Content Image">
+                <img class="img-responsive" src="img/1280x720/shin.jpg" alt="Content Image">
             </div>
         </div>
         <!-- End Promo Section -->
