--- a/HTML/magos.html
+++ b/HTML/magos.html
@@ -24,6 +24,7 @@
         <link href="css/filter.css" rel="stylesheet" type="text/css"/>
         <!-- THEME STYLES -->
         <link href="css/layout.min.css" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
 
         <!-- Favicon -->
@@ -108,9 +109,15 @@
                                 <img class="img-responsive" src="img/970x647/henry.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Henry Evans</a> <span class="text-uppercase margin-l-20">Cartomago ☆☆☆☆☆</span></h3>
+                        <h3><a href="#">Henry Evans</a> <span class="text-uppercase margin-l-20">Cartomago </span></h3>
                         <p>Hola, soy Henry, campeon de campeones mundiales, etc, etc</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>                       
                         <a class="link" href="#">Mi web</a>
+                        
                     </div>
                 </div>
                 <!-- End Our Exceptional Solutions -->
@@ -122,8 +129,13 @@
                                 <img class="img-responsive" src="img/970x647/zabaleta.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Iñaki zabaleta</a> <span class="text-uppercase margin-l-20">Cartomago ☆☆☆☆☆</span></h3>
+                        <h3><a href="#">Iñaki zabaleta</a> <span class="text-uppercase margin-l-20">Cartomago </span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>    
                     </div>
                 </div>
                 <!-- End Our Exceptional Solutions -->
@@ -136,8 +148,13 @@
                                 <img class="img-responsive" src="img/970x647/king.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Mac King</a> <span class="text-uppercase margin-l-20">Magia de Salón ☆☆☆☆☆</span></h3>
+                        <h3><a href="#">Mac King</a> <span class="text-uppercase margin-l-20">Magia de Salón </span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>    
                         <a class="link" href="#">Tienda</a>
                     </div>
                 </div>
@@ -150,8 +167,13 @@
                                 <img class="img-responsive" src="img/970x647/bronzini.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Bronzini</a> <span class="text-uppercase margin-l-20">Machista ☆☆☆</span></h3>
+                        <h3><a href="#">Bronzini</a> <span class="text-uppercase margin-l-20">Machista</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star "></span>
+                        <span class="fa fa-star "></span>    
                         <a class="link" href="#">YouTube</a>
                     </div>
                 </div>
@@ -164,8 +186,13 @@
                                 <img class="img-responsive" src="img/970x647/willy.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Willy Magia</a> <span class="text-uppercase margin-l-20">Magia general ☆☆☆☆</span></h3>
+                        <h3><a href="#">Willy Magia</a> <span class="text-uppercase margin-l-20">Magia general</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star "></span>    
 
                     </div>
                 </div>
@@ -178,8 +205,13 @@
                                 <img class="img-responsive" src="img/970x647/matus.jpg" alt="Our Exceptional Solutions Image">
                             </div>
                         </div>
-                        <h3><a href="#">Mago Matus</a> <span class="text-uppercase margin-l-20">Ilusiones ☆☆☆☆</span></h3>
+                        <h3><a href="#">Mago Matus</a> <span class="text-uppercase margin-l-20">Ilusiones</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star "></span>    
                         <a class="link" href="#">Read More</a>
                     </div>
                 </div>
