--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
    <head>
       <title>Por arte de Magia</title>
-      <meta http-equiv = "refresh" content = "2; url = https://diegoforni.github.io/PorArteDeMagia/HTML/index.html" />
+      <meta http-equiv="refresh" content="0; url=https://diegoforni.github.io/PorArteDeMagia/HTML/index.html" />
+      <p>Redireccionado</p>
+      <p>Tu navegador no ha redireccionado automaticamente, <a href="https://diegoforni.github.io/PorArteDeMagia/HTML/index.html"> haz click aquí</a></p>
    </head>
 </html>
