adjusted footer, headers and imgs

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -72,7 +72,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== PARALLAX ==========-->
-        <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
+        <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/teatro.jpg">
             <div class="parallax-content container">
                 <h1 class="carousel-title">Contacto</h1>
                 <p>Si quieres ser un mago avalado deberás rendir un examen <br/> que incluye tanto una prueba teórica, como practica.</p>
