--- a/HTML/magos.html
+++ b/HTML/magos.html
@@ -76,7 +76,7 @@
         <!--========== END HEADER ==========-->
 
         <!--========== PARALLAX ==========-->
-        <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
+        <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/closeup.jpg">
             <div class="parallax-content container">
                 <h1 class="carousel-title">Magos Avalados</h1>
                 <p>El jurado examinador de Por Arte de Magia ha calificado.. etc <br/> enim minim estudiat veniam siad venumus dolore</p>
