Created blog and nota

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -61,6 +61,7 @@
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="index.html">Inicio</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="magos.html">Magos</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="contacto.html">Contacto</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="blog.html">Blog</a></li>
                             </ul>
                         </div>
                     </div>
