--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,6 +63,7 @@
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover active" href="index.html">Inicio</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="magos.html">Magos</a></li>
                                 <li class="nav-item"><a class="nav-item-child nav-item-hover" href="contacto.html">Contacto</a></li>
+                                <li class="nav-item"><a class="nav-item-child nav-item-hover" href="blog.html">Blog</a></li>
                             </ul>
                         </div>
                     </div>
