--- a/HTML/index.html
+++ b/HTML/index.html
@@ -92,7 +92,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h1 class="carousel-title">Por arte de Magia</h1>
-                                <p>Nos dedicamos al aval de magos de todo el país, <br/> aquí puedes ver con cuantas estrellas los hemos calificado.</p>
+                                <p>Nos dedicamos al aval de magos de todo el país, <br/> aquí puedes ver con cuantas estrellas los hemos calificado.(i1) </p>
                             </div>
                             <a href="magos.html" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Magos</a>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="carousel-centered">
                             <div class="margin-b-40">
                                 <h2 class="carousel-title">Por arte de Magia</h2>
-                                <p>Nos dedicamos al aval de magos de todo el país, <br/> aquí puedes ver con cuantas estrellas los hemos calificado.</p>
+                                <p>Nos dedicamos al aval de magos de todo el país, <br/> aquí puedes ver con cuantas estrellas los hemos calificado. (i1)</p>
                             </div>
                             <a href="magos.html" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Magos</a>
                         </div>
@@ -120,21 +120,21 @@
                 <div class="row">
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3>Info</h3>
+                            <h3>Info (i2) </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
                             <a class="link" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-                            <h3>Otra info</h3>
+                            <h3>Otra info (i3) </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
                             <a class="link" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                            <h3>Más info</h3>
+                            <h3>Más info(i4) </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna ut consequat siad esqudiat dolor</p>
                             <a class="link" href="#">Read More</a>
                         </div>
@@ -149,7 +149,7 @@
         <div class="content-lg container">
             <div class="row margin-b-20">
                 <div class="col-sm-6">
-                    <h2>Otra Manera de poner Info</h2>
+                    <h2>Otra Manera de poner Info (i5)</h2>
                 </div>
             </div>
             <!--// end row -->
@@ -177,7 +177,7 @@
                         <div class="pricing">
                             <div class="margin-b-30">
                                 <i class="pricing-icon icon-user-following"></i>
-                                <h3>Profesional <span> $usd</span> 50</h3>
+                                <h3>Profesional <span> $usd</span> (i6)</h3>
                                 <p>Se dedican al mundo de la magia, y han demostrado un gran nivel</p>
                             </div>
                             <ul class="list-unstyled pricing-list margin-b-50">
@@ -194,7 +194,7 @@
                         <div class="pricing pricing-active">
                             <div class="margin-b-30">
                                 <i class="pricing-icon icon-badge"></i>
-                                <h3>Gran Maestro <span> $usd </span> 200+</h3>
+                                <h3>Gran Maestro <span> $usd </span> (i7)</h3>
                                 <p>Han demostrado ser lo mejor de lo mejor, conocidos y respetados a nivel internacional</p>
                             </div>
                             <ul class="list-unstyled pricing-list margin-b-50">
@@ -211,7 +211,7 @@
                         <div class="pricing">
                             <div class="margin-b-30">
                                 <i class="pricing-icon icon-magic-wand"></i>
-                                <h3>Amateur <span> $usd</span> 20</h3>
+                                <h3>Amateur <span> $usd</span> (i8)</h3>
                                 <p>Buen nivel de experiencia, no te va a defraudar!</p>
                             </div>
                             <ul class="list-unstyled pricing-list margin-b-50">
