--- a/HTML/index.html
+++ b/HTML/index.html
@@ -245,7 +245,7 @@
                             <img class="img-responsive" src="img/970x647/henry.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h3><a href="#">Henry Evans</a> <span class="text-uppercase margin-l-20">Cartomago ☆☆☆☆☆</span></h3>
+                    <h3><a href="#">Henry Evans</a> <span class="text-uppercase margin-l-20">Cartomago</span></h3>
                     <p>Hola, soy Henry, campeon de campeones mundiales, etc, etc</p>
                     <a class="link" href="#">Mi web</a>
                 </div>
@@ -258,7 +258,7 @@
                             <img class="img-responsive" src="img/970x647/king.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h3><a href="#">Mac King</a> <span class="text-uppercase margin-l-20">Magia de Salón ☆☆☆☆☆</span></h3>
+                    <h3><a href="#">Mac King</a> <span class="text-uppercase margin-l-20">Magia de Salón</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                     <a class="link" href="#">Tienda</a>
                 </div>
@@ -271,7 +271,7 @@
                             <img class="img-responsive" src="img/970x647/matus.jpg" alt="Our Exceptional Solutions Image">
                         </div>
                     </div>
-                    <h3><a href="#">Mago Matus</a> <span class="text-uppercase margin-l-20">Ilusiones ☆☆☆☆</span></h3>
+                    <h3><a href="#">Mago Matus</a> <span class="text-uppercase margin-l-20">Ilusiones</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor</p>
                     <a class="link" href="#">Read More</a>
                 </div>
