--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -102,7 +102,7 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3><a href="#">Buenos Aires</a> <span class="text-uppercase margin-l-20">FIDI</span></h3>
+                            <h3><a href="www.fidi.com">Buenos Aires</a> <span class="text-uppercase margin-l-20">FIDI</span></h3>
                             <p>Tomarás tanto la parte teórica como practica en la academia Henry Evans, en el microcentro de Buenos Aires.</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> +54 11 3456 7890</li>
@@ -115,7 +115,7 @@
                     <!-- Contact List -->
                     <div class="col-sm-4 sm-margin-b-50">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <h3><a href="#">Otras Provincias</a> <span class="text-uppercase margin-l-20">Red Maso</span></h3>
+                            <h3><a href="www.fidi.com">Otras Provincias</a> <span class="text-uppercase margin-l-20">Red Maso</span></h3>
                             <p>Si quieres tomar el examen desde otras zonas del país debes contactar a la Red de Magos Solidarios y ellos te indicarán dónde rendir</p>
                             <ul class="list-unstyled contact-list">
                                 <li><i class="margin-r-10 color-base icon-call-out"></i> +54 11 1596 1458</li>
@@ -167,7 +167,7 @@
                         <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                     </div>
                     <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" >Por </a> Arte de <a class="color-base fweight-700" >  Magia</a></p>
+                        <p class="margin-b-0"><a class="color-base fweight-700" >Por </a> Arte de <a class="color-base fweight-700" >  Magia</a> Derechos Reservados </p>
                     </div>
                 </div>
                 <!--// end row -->
