--- a/HTML/index.html
+++ b/HTML/index.html
@@ -296,7 +296,7 @@
                         <img class="footer-logo" src="img/logo.png" alt="Asentus Logo">
                     </div>
                     <div class="col-xs-6 text-right">
-                        <p class="margin-b-0"><a class="color-base fweight-700" >Por </a> Arte de <a class="color-base fweight-700" >  Magia</a></p>
+                        <p class="margin-b-0"><a class="color-base fweight-700" >Por </a> Arte de <a class="color-base fweight-700" >  Magia</a> Derechos Reservados </p>
                     </div>
                 </div>
                 <!--// end row -->
